# star-wars

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.yml
config/: settings.py  urls.py
space_station/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
space_station/migrations/: 0001_initial.py
tests/: conftest.py
tests/space_station/: test_station.py
