[tool.poetry]
name = "star-wars"
version = "0.1.0"
description = ""
authors = ["dima-anatsko <anatskodr@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
django = "~3.2"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.24.2"
psycopg2-binary = "^2.9.5"
django-environ = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pytest-django = "^4.5.2"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
